[gd_scene load_steps=5 format=3 uid="uid://arena"]

[ext_resource type="Script" path="res://scripts/arena.gd" id="1"]
[ext_resource type="Script" path="res://scripts/ctf/flag_base.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://red_flag" path="res://scenes/flag.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://blue_flag" path="res://scenes/flag.tscn" id="4"]

[sub_resource type="BoxShape3D" id="BoxShape3D_floor"]
size = Vector3(100, 1, 80)

[sub_resource type="BoxMesh" id="BoxMesh_floor"]
size = Vector3(100, 1, 80)

[sub_resource type="BoxShape3D" id="BoxShape3D_base"]
size = Vector3(8, 4, 8)

[node name="Arena" type="Node3D"]
script = ExtResource("1")

[node name="Floor" type="StaticBody3D" parent="."]
collision_layer = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_floor")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
mesh = SubResource("BoxMesh_floor")

[node name="Walls" type="Node3D" parent="."]

[node name="WallN" type="StaticBody3D" parent="Walls"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls/WallN"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, -40)
shape = SubResource("BoxShape3D_floor")
scale = Vector3(1, 0.2, 0.5)

[node name="WallS" type="StaticBody3D" parent="Walls"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls/WallS"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 40)
shape = SubResource("BoxShape3D_floor")
scale = Vector3(1, 0.2, 0.5)

[node name="WallE" type="StaticBody3D" parent="Walls"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls/WallE"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 50, 5, 0)
shape = SubResource("BoxShape3D_floor")
scale = Vector3(0.5, 0.2, 1)

[node name="WallW" type="StaticBody3D" parent="Walls"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls/WallW"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -50, 5, 0)
shape = SubResource("BoxShape3D_floor")
scale = Vector3(0.5, 0.2, 1)

[node name="RedBase" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -45, 1, 0)
script = ExtResource("2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RedBase"]
shape = SubResource("BoxShape3D_base")

[node name="BlueBase" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 45, 1, 0)
script = ExtResource("2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="BlueBase"]
shape = SubResource("BoxShape3D_base")

[node name="RedFlag" parent="." instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -45, 2, 0)

[node name="BlueFlag" parent="." instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 45, 2, 0)
